--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@types/p5": "^0.7.2",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
+    "bootstrap": "^4.3.1",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "p5": "^0.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "typescript": "^3.4.5"
   },
