--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/react-dom": "^16.8.4",
     "bootstrap": "^4.3.1",
     "chai": "^4.2.0",
+    "jquery": "^3.4.1",
     "mocha": "^6.1.4",
     "p5": "^0.8.0",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
